apps/penny-dev/database/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: penny-dev
  labels:
    app.kubernetes.io/part-of: penny
    environment: development
